ChangeLog
=========

Release: 1.3.2
===============================================================================
2022-05-14 Fixed sorting of subpages.
           Added some system buttons to upper and lower the volume TPanel uses.
           Fixed a bug in sort algorithm which ended in a crash of application.

2022-05-12 Made commands case insensitive.
           Added swipe support.
           If there is no toolbar the back button is now asking if the user
           want to see the setup dialog or quit the app.

2022-05-10 Fixed the orientation so that portrait and landscape is now
           correctly detected.
           Fixed the Z-order when a popup is raised to top.
           Fixed the Z-order for popups called from existing popups previously
           raised to top.
           Added recognition of sub parameters on command ^BMF.

2022-05-09 Added command ^BMF: Not all options are implemented!
           Fixed cuted off text lines containing a comma for command ^TXT.

2022-05-07 Added command ^VTP.

2022-05-05 Added command ^AFP rudimentary. The command is missing the
           animation effects.
           Added self feed commands.
           Added command send on button hit to controller.
           Fixed switching pages: The open popups are closed and buttons are
           removed from page. Then the new page is initialized.

2022-05-04 Fixed color search when a color was defined as an index number.
           Fixed page size setting and calculation of a potential hight
           oversize.
           Added the scPanel command to the button functions.
           Fixed the sToggle button command. Now it loads a page and shows it
           if it is not in the internal cache.

2022-05-02 Honors now the VOIP channel setting for SIP.
           Added the "User-Agent" header to the SIP client.
           Added a new command IM (instant message) to send instant messages
           over a SIP server.
