@@ -26,10 +26,10 @@
 #define V_MAJOR     1
 #define V_MINOR     3
 #define V_PATCH     2
-#define V_ADD       "b3"
+#define V_ADD       "b4"
 
 #ifndef V_SERIAL
-#define V_SERIAL    "20220513T132B"
+#define V_SERIAL    "20220515T132B"
 #endif
 
 /**
